api接口文档管理系统设计文档

--- a/src/main/resources/static/projectInterface.html
+++ b/src/main/resources/static/projectInterface.html
@@ -576,7 +576,7 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="form-group">
-                            <textarea class="form-control" placeholder="功能描述"></textarea>
+                            <textarea class="form-control" placeholder="功能描述" rows="3"></textarea>
                         </div>
                     </div>
                 </div>
