api接口文档管理系统设计文档

--- a/src/main/resources/static/projectInterface.html
+++ b/src/main/resources/static/projectInterface.html
@@ -418,7 +418,7 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="form-group">
-                            <textarea class="form-control" placeholder="请在此处介绍自己..." rows="3"></textarea>
+                            <textarea class="form-control" placeholder="接口描述" rows="3"></textarea>
                         </div>
                     </div>
                 </div>
