--- a/src/main/resources/static/projectInterface.html
+++ b/src/main/resources/static/projectInterface.html
@@ -57,26 +57,26 @@
             //HTTP接口添加参数
             $("#httpAddRequestParam").click(function () {
                 var html = "<tr> " +
-                    "<td> <input type=\"text\" class=\"form-control input-sm\" style='height: 25px;'> </td> " +
+                    "<td> <input name='paramNamesInput' type=\"text\" class=\"form-control input-sm\" style='height: 25px;'> </td> " +
                     " <td> " +
-                    "<select class=\"form-control input-sm\" style='height: 25px;'> " +
+                    "<select name='paramTypesInput' class=\"form-control input-sm\" style='height: 25px;'> " +
                     "<option value=\"string\">string</option> " +
                     "</select> " +
                     "</td>" +
                     "<td>" +
-                    "<input type=\"text\" class=\"form-control input-sm\" style='height: 25px;' >" +
+                    "<input name='paramDescribesInput' type=\"text\" class=\"form-control input-sm\" style='height: 25px;' >" +
                     "</td>" +
                     "<td>" +
-                    "<input type=\"checkbox\" class=\"form-control input-sm\" style='height: 18px;' >" +
+                    "<input name='requiredsInput' type=\"checkbox\" class=\"form-control input-sm\" style='height: 18px;' >" +
                     "</td>" +
                     "<td>" +
-                    "<input type=\"checkbox\" class=\"form-control input-sm\" style='height: 18px;'>" +
+                    "<input name='jsontransformatsInput' type=\"checkbox\" class=\"form-control input-sm\" style='height: 18px;'>" +
                     "</td>" +
                     "<td> " +
-                    "<input type=\"text\" class=\"form-control input-sm\" style='height: 25px;'>" +
+                    "<input name='examplesInput' type=\"text\" class=\"form-control input-sm\" style='height: 25px;'>" +
                     "</td>" +
                     "<td> " +
-                    "<input type=\"text\" class=\"form-control input-sm\" style='height: 25px;'>" +
+                    "<input name='defaultValuesInput' type=\"text\" class=\"form-control input-sm\" style='height: 25px;'>" +
                     "</td>" +
                     "<td>" +
                     "<a href=\"#\">" +
@@ -380,7 +380,7 @@
                 <div class="row">
                     <div class="col-sm-2">
                         <div class="form-group">
-                            <select class="form-control">
+                            <select class="form-control" name="protocolInput">
                                 <option value="HTTP">HTTP</option>
                                 <option value="HTTPS">HTTPS</option>
                             </select>
@@ -388,7 +388,7 @@
                     </div>
                     <div class="col-sm-2">
                         <div class="form-group">
-                            <select class="form-control">
+                            <select class="form-control" name="methodInput">
                                 <option value="GET">GET</option>
                                 <option value="POST">POST</option>
                             </select>
@@ -396,7 +396,7 @@
                     </div>
                     <div class="col-sm-2">
                         <div class="form-group">
-                            <select class="form-control">
+                            <select class="form-control" name="transformatInput">
                                 <option value="JSON">JSON</option>
                                 <option value="XML">XML</option>
                             </select>
@@ -404,21 +404,21 @@
                     </div>
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <input type="text" class="form-control" value="" placeholder="接口地址"/>
+                            <input type="text" name="addressInput" class="form-control" value="" placeholder="接口地址"/>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="form-group">
-                            <input type="text" class="form-control" value="" placeholder="接口名称"/>
+                            <input type="text" name="nameInput" class="form-control" value="" placeholder="接口名称"/>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="form-group">
-                            <textarea class="form-control" placeholder="接口描述" rows="3"></textarea>
+                            <textarea name="descriptionInput" class="form-control" placeholder="接口描述" rows="3"></textarea>
                         </div>
                     </div>
                 </div>
@@ -448,27 +448,27 @@
                                 <tbody>
                                 <tr>
                                     <td>
-                                        <input type="text" class="form-control input-sm" style="height: 25px;">
+                                        <input type="text" name="paramNamesInput" class="form-control input-sm" style="height: 25px;">
                                     </td>
                                     <td>
-                                        <select class="form-control input-sm" style="height: 25px;">
+                                        <select name="paramTypesInput" class="form-control input-sm" style="height: 25px;">
                                             <option value="string">string</option>
                                         </select>
                                     </td>
                                     <td>
-                                        <input type="text" class="form-control input-sm" style="height: 25px;">
+                                        <input name="paramDescribesInput" type="text" class="form-control input-sm" style="height: 25px;">
                                     </td>
                                     <td>
-                                        <input type="checkbox" class="form-control input-sm" style="height: 18px;">
+                                        <input name="requiredsInput" type="checkbox" class="form-control input-sm" style="height: 18px;">
                                     </td>
                                     <td>
-                                        <input type="checkbox" class="form-control input-sm" style="height: 18px;">
+                                        <input name="jsontransformatsInput" type="checkbox" class="form-control input-sm" style="height: 18px;">
                                     </td>
                                     <td>
-                                        <input type="text" class="form-control input-sm" style="height: 25px;">
+                                        <input name="examplesInput" type="text" class="form-control input-sm" style="height: 25px;">
                                     </td>
                                     <td>
-                                        <input type="text" class="form-control input-sm" style="height: 25px;">
+                                        <input name="defaultValuesInput" type="text" class="form-control input-sm" style="height: 25px;">
                                     </td>
                                     <td>
                                         <a href="#">
@@ -513,19 +513,19 @@
                             <div class="tab-pane fade in active" id="returnExampleHttp">
                                 <br/>
                                 <div class="form-group">
-                                    <textarea class="form-control" placeholder="暂无返回示例"></textarea>
+                                    <textarea name="returnExampleContent" class="form-control" placeholder="暂无返回示例"></textarea>
                                 </div>
                                 <div class="form-group">
-                                    <textarea class="form-control" placeholder="注意事项"></textarea>
+                                    <textarea name="returnExampleAttentionMatters" class="form-control" placeholder="注意事项"></textarea>
                                 </div>
                             </div>
                             <div class="tab-pane fade" id="exceptionExampleHttp">
                                 <br/>
                                 <div class="form-group">
-                                    <textarea class="form-control" placeholder="暂无异常示例"></textarea>
+                                    <textarea name="exceptionExampleContent" class="form-control" placeholder="暂无异常示例"></textarea>
                                 </div>
                                 <div class="form-group">
-                                    <textarea class="form-control" placeholder="注意事项"></textarea>
+                                    <textarea name="exceptionAttentionMatters" class="form-control" placeholder="注意事项"></textarea>
                                 </div>
                             </div>
                         </div>
