api接口文档管理系统设计文档

--- a/src/main/resources/static/projectInterface.html
+++ b/src/main/resources/static/projectInterface.html
@@ -401,7 +401,7 @@
                 </h4>
             </div>
             <div class="modal-body">
-                <form class="form-horizontal" id="newInterfaceHttpForm" role="form">
+                <form id="newInterfaceHttpForm" role="form">
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="form-group">
