--- a/src/main/resources/static/projectInterface.html
+++ b/src/main/resources/static/projectInterface.html
@@ -8,6 +8,9 @@
     <script src="webFrame/bootstrap-3.3.7/dist/js/bootstrap.min.js"></script>
     <script>
         $(function () {
+            var boolObj = new Object();
+            boolObj[true] = "是";
+            boolObj[false] = "否";
             function add0(m) {
                 return m < 10 ? '0' + m : m
             }
@@ -85,6 +88,29 @@
                 var interfaceId = $(this).attr("data-interfaceid");
                 $.get("interfaceHttp/findInterfaceHttp/" + interfaceId, null, function (data) {
                     console.log(data);
+                    $("#interfaceNameView").html(data.name);
+                    $("#interfaceDescribeView").html(data.description);
+                    $("#dataFormatView").html(data.transformat);
+                    $("#requestMethodView").html(data.protocol + " + " + data.method);
+                    $("#interfaceAddressView").html(data.address);
+
+                    //请求参数
+                    if (data.interfaceParamEntities != null && data.interfaceParamEntities.length > 0) {
+                        var trElements = "";
+                        for (var i = 0; i < data.interfaceParamEntities.length; i++) {
+                            var trElement = "<tr>";
+                            trElement += ("<td>" + data.interfaceParamEntities[i].paramName + "</td>");
+                            trElement += ("<td>" + data.interfaceParamEntities[i].paramType + "</td>");
+                            trElement += ("<td>" + data.interfaceParamEntities[i].paramDescribe + "</td>");
+                            trElement += ("<td>" + boolObj[data.interfaceParamEntities[i].required] + "</td>");
+                            trElement += ("<td>" + boolObj[data.interfaceParamEntities[i].jsontransformat] + "</td>");
+                            trElement += ("<td>" + data.interfaceParamEntities[i].example + "</td>");
+                            trElement += ("<td>" + data.interfaceParamEntities[i].defaultValue + "</td>");
+                            trElement += ("</tr>");
+                            trElements += trElement;
+                        }
+                        $("#myHttpPreviewTBody").html(trElements);
+                    }
                 });
             });
 
@@ -817,7 +843,9 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="form-group">
-                            <h3>接口名称占位符</h3>
+                            <h3 id="interfaceNameView">
+                                <!--接口名称占位符-->
+                            </h3>
                         </div>
                     </div>
                 </div>
@@ -828,8 +856,8 @@
                         </div>
                     </div>
                     <div class="col-sm-10">
-                        <div class="form-group">
-                            接口描述占位符
+                        <div class="form-group" id="interfaceDescribeView">
+                            <!--接口描述占位符-->
                         </div>
                     </div>
                 </div>
@@ -840,8 +868,8 @@
                         </div>
                     </div>
                     <div class="col-sm-10">
-                        <div class="form-group">
-                            数据格式占位符（如：JSON）
+                        <div class="form-group" id="dataFormatView">
+                            <!--数据格式占位符（如：JSON）-->
                         </div>
                     </div>
                 </div>
@@ -852,8 +880,8 @@
                         </div>
                     </div>
                     <div class="col-sm-10">
-                        <div class="form-group">
-                            请求方式占位符（如：HTTP+GET）
+                        <div class="form-group" id="requestMethodView">
+                            <!--请求方式占位符（如：HTTP+GET）-->
                         </div>
                     </div>
                 </div>
@@ -864,8 +892,8 @@
                         </div>
                     </div>
                     <div class="col-sm-10">
-                        <div class="form-group">
-                            接口地址占位符
+                        <div class="form-group" id="interfaceAddressView">
+                            <!--接口地址占位符-->
                         </div>
                     </div>
                 </div>
@@ -880,19 +908,20 @@
                                     <th>类型</th>
                                     <th>说明</th>
                                     <th>是否必填</th>
+                                    <th>JSON格式化传输</th>
                                     <th>示例</th>
                                     <th>默认值</th>
                                 </tr>
                                 </thead>
-                                <tbody>
-                                <tr>
-                                    <td>userId</td>
-                                    <td>string</td>
-                                    <td>用户ID</td>
-                                    <td>是</td>
-                                    <td>userId=hello</td>
-                                    <td>放大发送</td>
-                                </tr>
+                                <tbody id="myHttpPreviewTBody">
+                                <!--<tr>-->
+                                <!--<td>userId</td>-->
+                                <!--<td>string</td>-->
+                                <!--<td>用户ID</td>-->
+                                <!--<td>是</td>-->
+                                <!--<td>userId=hello</td>-->
+                                <!--<td>放大发送</td>-->
+                                <!--</tr>-->
                                 </tbody>
                             </table>
                         </div>
